@@ -1,3 +1,10 @@
+2011-08-24         Arnold D. Robbins     <arnold@skeeve.com>
+
+	Fix pty co-process communication on Ubuntu GNU/Linux.
+
+	* io.c: Add include of <sys/ioctl.h> to get definition of TIOCSCTTY.
+	(two_way_open): Move call for this ioctl to after setsid() call.
+
 2011-08-23         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* regex_internal.c (re_string_fetch_byte_case ): Remove
